fixed image overflow, TODO: fix snippet display

--- a/styles/restful-nyt-api-style.css
+++ b/styles/restful-nyt-api-style.css
@@ -20,7 +20,7 @@ header
 
 .results
 {
-    flex: 1.5;
+    flex: 1.25;
     padding: 1%;
 }
 
@@ -59,11 +59,21 @@ article
     border: 1px solid #ccc;
 }
 
+/*
+    Fixing image overflow(float right) by using display flex
+*/
+.keyword-img-div
+{
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center; 
+}
+
 img
 {
+    flex: 1;
     max-width: 200px;
     margin-left: 20px;
-    float: right;
 }
 
 span
@@ -75,6 +85,7 @@ span
 
 article p.keywords
 {
+    flex: 1.5;
     display:flex;
     flex-flow: row wrap;
     align-items: center; 
